# whisp-away

./: .gitignore  Cargo.toml  LICENSE  README.md  build.nix  default.nix  flake.nix  git-deps.nix  shell.nix  whisp-away.desktop
packaging/nixos/: home-manager.nix  nixos.nix
packaging/nixos/gpu_config_examples/: gpu-intel.nix  gpu-nvidia.nix
scripts/: model-download.nix
src/: helpers.rs  main.rs  recording.rs  socket.rs  tray.rs  typing.rs
src/faster_whisper/: client.rs  daemon.rs  direct.rs  mod.rs
src/faster_whisper/scripts/: transcribe_faster.py  whisper_daemon.py
src/whisper_cpp/: client.rs  daemon.rs  direct.rs  mod.rs
tests/: benchmark_whisp.sh
whisper-cpp/: README.md  whisper-cpp-cpu-only.nix  whisper-cpp-openvino-fixed.nix  whisper-cpp-vulkan.nix
