[package]
name = "whisp-away"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
libc = "0.2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
whisper-rs = { git = "https://codeberg.org/madjinn/whisper-rs.git" }
tracing = "0.1"
tracing-subscriber = "0.3"
ksni = "0.2"
dirs = "5"

[features]
default = []
vulkan = ["whisper-rs/vulkan"]
openvino = ["whisper-rs/openvino"]
cuda = ["whisper-rs/cuda"]